{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 19,
  "lineage": "38091c09-4e54-6887-0701-3f007082666a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:security-group/sg-0339e33a0b16ee549",
            "description": "Security group for ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0339e33a0b16ee549",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ccs3316-ecs-sg",
            "name_prefix": "",
            "owner_id": "520369549394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ccs3316-ecs-sg"
            },
            "tags_all": {
              "Name": "ccs3316-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:network-acl/acl-0c16b319a5ad22d60",
            "default_network_acl_id": "acl-0c16b319a5ad22d60",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c16b319a5ad22d60",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "520369549394",
            "subnet_ids": [
              "subnet-0818a135e28ebfc47"
            ],
            "tags": {
              "Name": "ccs3316-vpc-default"
            },
            "tags_all": {
              "Name": "ccs3316-vpc-default"
            },
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:route-table/rtb-0ba62513faf89c041",
            "default_route_table_id": "rtb-0ba62513faf89c041",
            "id": "rtb-0ba62513faf89c041",
            "owner_id": "520369549394",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "ccs3316-vpc-default"
            },
            "tags_all": {
              "Name": "ccs3316-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:security-group/sg-0776d7b8a34d256d8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0776d7b8a34d256d8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "520369549394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ccs3316-vpc-default"
            },
            "tags_all": {
              "Name": "ccs3316-vpc-default"
            },
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:internet-gateway/igw-0f0e78726750f2fc8",
            "id": "igw-0f0e78726750f2fc8",
            "owner_id": "520369549394",
            "tags": {
              "Name": "ccs3316-vpc"
            },
            "tags_all": {
              "Name": "ccs3316-vpc"
            },
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0e78726750f2fc8",
            "id": "r-rtb-0dfa0187c17c2e5a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dfa0187c17c2e5a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:route-table/rtb-0dfa0187c17c2e5a3",
            "id": "rtb-0dfa0187c17c2e5a3",
            "owner_id": "520369549394",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ccs3316-vpc-public"
            },
            "tags_all": {
              "Name": "ccs3316-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b81a44a8ef645db9",
            "route_table_id": "rtb-0dfa0187c17c2e5a3",
            "subnet_id": "subnet-0818a135e28ebfc47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed2870a4b4506ae2",
            "route_table_id": "rtb-0dfa0187c17c2e5a3",
            "subnet_id": "subnet-0b7bacbd938910959"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:subnet/subnet-0818a135e28ebfc47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818a135e28ebfc47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520369549394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ccs3316-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Name": "ccs3316-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:subnet/subnet-0b7bacbd938910959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7bacbd938910959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520369549394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ccs3316-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Name": "ccs3316-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-07561bed40698dda1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520369549394:vpc/vpc-07561bed40698dda1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c16b319a5ad22d60",
            "default_route_table_id": "rtb-0ba62513faf89c041",
            "default_security_group_id": "sg-0776d7b8a34d256d8",
            "dhcp_options_id": "dopt-02203aecc20ed28ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07561bed40698dda1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba62513faf89c041",
            "owner_id": "520369549394",
            "tags": {
              "Name": "ccs3316-vpc"
            },
            "tags_all": {
              "Name": "ccs3316-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}